[tool.poetry]
name = "deepikapy"
version = "0.1.0"
description = "This package is dedicated to deepika"
authors = ["zardamhussain <zardamhussain@gmail.com>"]
license = "self"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
fallback_version = "0.0.0-dev"