[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"



[project]
name = "deepikapy"
dynamic = ["version"]
description = "This package is dedicated to deepika"
authors = ["zardamhussain <zardamhussain@gmail.com>"]
license = "self"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]



[project.urls]
Source = "https://github.com/zardamhussain/test"


[project.optional-dependencies]
#All optional deps

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
fallback_version = "0.0.0-dev"